--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
   <body>
     <h1>Hello, world!</h1>
 
+    <div class="alert alert-primary" role="alert">
+        A simple primary alert—check it out!
+    </div>
+
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
