--- a/second.html
+++ b/second.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Second Page</title>
 </head>
-<body>
+<body> 
+    <p>This is the second page added in the test-repository</p>
     
 </body>
 </html>
