New changes added ti index.html and Second.html

--- a/second.html
+++ b/second.html
@@ -8,6 +8,7 @@
 </head>
 <body> 
     <p>This is the second page added in the test-repository</p>
+    <p>This is the second edit done</p>
     
 </body>
 </html>
